Fix whitespace bug

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -21,3 +21,7 @@
 .head {
 	margin: 15px;
 }
+
+.keep-space {
+	white-space: pre-line;
+}
